Fix seed data to reflect Quill formatting

--- a/app/assets/stylesheets/api/stories.css
+++ b/app/assets/stylesheets/api/stories.css
@@ -103,6 +103,12 @@
   color: #333;
 }
 
+.story h2 {
+  text-align: center;
+  color: grey;
+  font-style: italic;
+}
+
 .story h3 {
   margin-top: 20px;
   margin-left: 80px;
