--- a/app/assets/stylesheets/api/stories.css
+++ b/app/assets/stylesheets/api/stories.css
@@ -168,6 +168,16 @@
   padding-bottom: 0px;
 }
 
+.story ul {
+  list-style-type: circle;
+  margin-left: 150px;
+}
+
+.story ol {
+  list-style-type: decimal;
+  margin-left: 150px;
+}
+
 .story .body {
   margin-top: 20px;
   margin-bottom: 60px;
