--- a/app/assets/stylesheets/api/stories.css
+++ b/app/assets/stylesheets/api/stories.css
@@ -27,7 +27,13 @@
   flex-direction: column;
   align-items: center;
   animation-name: fadeIn;
-  animation-duration: 0.2s;
+  animation-duration: 0.05s;
+}
+
+.fade-out {
+  opacity: 0;
+  animation-name: fadeOut;
+  animation-duration: 0.05s;
 }
 
 .controls-footer {
