Prevent textarea resizing

--- a/app/assets/stylesheets/api/comments.css
+++ b/app/assets/stylesheets/api/comments.css
@@ -4,6 +4,10 @@
   padding-bottom: 50px;
 }
 
+textarea {
+    resize: none;
+}
+
 .responsesHeader, .noResponses {
   display: block;
   width: 632px;
