--- a/app/assets/stylesheets/api/users.css
+++ b/app/assets/stylesheets/api/users.css
@@ -75,7 +75,8 @@
 
 .comment .userInfo .username {
   font-size: 16px;
-  font-weight: bold;
+  font-weight: normal;
+  font-family: 'PT Sans';
 }
 
 .comment .userInfo .date {
