Change all instances of http to https

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     };
   </script>
   <link
-    rel="shortcut icon" href="http://res.cloudinary.com/dzeqeo9b3/image/upload/v1505193605/small_favicon_di96b3.ico"
+    rel="shortcut icon" href="https://res.cloudinary.com/dzeqeo9b3/image/upload/v1505193605/small_favicon_di96b3.ico"
     type="image/x-icon">
 </head>
 <body>
